Fixes #1, #2, #2 - config page changed basic validation on config performed

--- a/src/appsscript.json
+++ b/src/appsscript.json
@@ -5,7 +5,7 @@
   "exceptionLogging": "STACKDRIVER",
   "runtimeVersion": "V8",
   "dataStudio": {
-    "name": "datastudio-hubspot-connector",
+    "name": "HubSpot",
     "logoUrl": "https://ovly.com.br/wp-content/uploads/2018/08/Ovly-Logo-Color-White-Background.jpg",
     "company": "OVLY",
     "companyUrl": "http://ovly.com.br/",
